--- a/css/header.css
+++ b/css/header.css
@@ -24,6 +24,12 @@ body {
   padding-top: 15px;
   text-decoration: none;
 }
+.phone {
+  display: none;
+}
+.fa-bars {
+  display: none;
+}
 .grid-item:hover {
   color: white;
 }
@@ -55,3 +61,20 @@ header {
   height: 90vh;
 }
 /* VIDEO HEADER */
+
+
+.viewport {
+  /* height: 110vh; */
+  /* width: 50vw;
+  position: relative;
+  border: 1px solid red;
+  margin: 10% 25%; */
+}
+/*
+iframe {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: -1;
+} */
