--- a/css/contact-header.css
+++ b/css/contact-header.css
@@ -27,9 +27,11 @@ header {
   color: white;
 }
 .logo {
-  font-size: 40px;
+  /* font-size: 40px; */
   padding-top: 0;
   color: white;
+  width: 100%;
+  height: 10px;
 }
 .phone {
   display: none;
