--- a/css/header.css
+++ b/css/header.css
@@ -34,9 +34,12 @@ body {
   color: white;
 }
 .logo {
-  font-size: 40px;
+  /* font-size: 40px; */
   padding-top: 0;
   color: white;
+  width: 100%;
+  height: 10px;
+
 }
 /* NAVBAR */
 
