--- a/css/main.css
+++ b/css/main.css
@@ -10,7 +10,7 @@
   /* grid-auto-rows: 200px;
   grid-auto-columns: 200px; */
 }
-img {
+.img-thumnail {
   width: 100%;
   height: 25vh;
 }
@@ -18,7 +18,7 @@ img {
 
 
 /* IMAGE HOVER OVERLAY */
-img:hover {
+.img-thumnail:hover {
   opacity: 0.5;
 }
 .title-div {
