--- a/css/main.css
+++ b/css/main.css
@@ -6,13 +6,15 @@
 .container {
   display: grid;
   grid-gap: 10px;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  /* grid-template-columns: repeat(3, 1fr); */
+  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+  grid-template-rows: repeat(225px);
   /* grid-auto-rows: 200px;
   grid-auto-columns: 200px; */
 }
 .img-thumnail {
   width: 100%;
-  height: 25vh;
+  height: 225;
 }
 /* IMAGE GRID */
 
@@ -73,3 +75,5 @@ a:hover .title-div {
   color: rgb(120, 119, 119);
 }
 /* FOOTER */
+
+
