--- a/css/contact.css
+++ b/css/contact.css
@@ -69,7 +69,7 @@ form > textarea {
   text-align: center;
 }
 .footer > a {
-  margin-top: 40px;
+  margin: 40px;
   text-decoration: none;
   color: rgb(206, 203, 203);
   font-size: 40px;
@@ -83,5 +83,8 @@ form > textarea {
   font-weight: 100;
   letter-spacing: 1px;
   color: rgb(120, 119, 119);
+}
+.footer-span-text {
+  font-size: 15px;
 }
 /* FOOTER */
