--- a/css/contact.css
+++ b/css/contact.css
@@ -16,7 +16,7 @@ body {
 form {
   max-width: 40%;
   margin: 0 auto;
-  height: 80vh;
+  height: 60vh;
 }
 form > input, form > textarea{
   width: 100%;
@@ -52,7 +52,7 @@ form > textarea {
 }
 #center-btn {
   display: block;
-  margin-top: 10px;
+  /* margin-top: 10px; */
   text-align: center;
 }
 /* EMAIL FORM */
@@ -60,12 +60,13 @@ form > textarea {
 
 /* FOOTER */
 .footer {
+  display: inline-block;
   background-color: black;
   width: 100%;
   height: 20vh;
   padding: 0;
   margin: 0;
-  margin-top: 40px;
+  /* margin-top: 40px; */
   text-align: center;
 }
 .footer > a {
@@ -85,6 +86,6 @@ form > textarea {
   color: rgb(120, 119, 119);
 }
 .footer-span-text {
-  font-size: 15px;
+  font-size: 20px;
 }
 /* FOOTER */
