--- a/css/mq-main.css
+++ b/css/mq-main.css
@@ -1,12 +1,37 @@
 @media only screen and (max-width: 760px) {
   .sec-two {
-    overflow-x: hidden
+    /* overflow-x: hidden */
   }
   .footer {
-    height: 40vh;
+    height: 43vh;
     text-align: left;
   }
   .footer > a {
     margin: 20px 40px;
+  }
+  
+  @media (orientation: landscape) {
+    .viewport {
+     height: 24vh;
+    }
+    header {
+      margin-bottom: 14vh;
+    }
+    .footer {
+      height: 43vh;
+      text-align: center;
+    }
+    .footer > a {
+      margin: 20px 40px;
+    }
+  }
+}
+
+@media only screen and (max-width: 1355px) {
+  .container {
+    display: grid;
+    grid-gap: 10px;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    grid-template-rows: repeat(225px);
   }
 }
