--- a/css/header.css
+++ b/css/header.css
@@ -15,14 +15,17 @@ body {
   top: 0;
   left: 50%;
   margin-left: -20%;
+  /* height: 10vh; */
 }
 .grid-item {
   background-color: transparent;
   color: rgb(201, 198, 198);
-  font-size: 20px;
+  /* font-size: 20px; */
+  font-size: 100%;
   text-align: center;
   padding-top: 15px;
   text-decoration: none;
+  height: 10vh;
 }
 .phone {
   display: none;
@@ -35,10 +38,10 @@ body {
 }
 .logo {
   /* font-size: 40px; */
-  padding-top: 0;
+  /* padding-top: 0;
   color: white;
   width: 100%;
-  height: 10px;
+  height: 10px; */
 
 }
 /* NAVBAR */
