--- a/css/contact-header.css
+++ b/css/contact-header.css
@@ -2,7 +2,7 @@
 header {
   background-color: black;
   width: 100%;
-  height: 10vh;
+  height: 100px;
 }
 .grid-container {
   display: grid;
@@ -28,7 +28,7 @@ header {
 }
 .logo {
   /* font-size: 40px; */
-  padding-top: 0;
+  /* padding-top: 0; */
   color: white;
   width: 100%;
   height: 10px;
