--- a/css/contact.css
+++ b/css/contact.css
@@ -16,7 +16,7 @@ body {
 form {
   max-width: 40%;
   margin: 0 auto;
-  height: 60vh;
+  /* height: 60vh; */
   margin-bottom: 10vh;
 }
 form > input, form > textarea{
@@ -64,7 +64,7 @@ form > textarea {
   display: inline-block;
   background-color: black;
   width: 100%;
-  height: 20vh;
+  height: 250px;
   padding: 0;
   margin: 0;
   /* margin-top: 40px; */
