--- a/css/main.css
+++ b/css/main.css
@@ -58,7 +58,7 @@ a:hover .title-div {
 .footer {
   background-color: black;
   width: 100%;
-  height: 20vh;
+  height: 250px;
   padding: 0;
   margin: 0;
   margin-top: 100px;
