--- a/css/mq-contact.css
+++ b/css/mq-contact.css
@@ -4,12 +4,14 @@
     max-width: 80%;
   }
   .footer {
-    height: 40vh;
+    /* height: 40vh; */
     text-align: left;
   }
   .footer > a {
     margin: 20px 40px;
 
   }
+
+
 }
 /* EMAIL FORM */
