--- a/css/mq-main.css
+++ b/css/mq-main.css
@@ -1,16 +1,3 @@
-@media only screen and (max-width: 760px) {
-  .footer {
-    height: 43vh;
-    text-align: left;
-  }
-  .footer > a {
-    margin: 20px 40px;
-  }
-}
-
-
-
-
 @media only screen and (max-width: 1355px) {
   .container {
     display: grid;
@@ -33,30 +20,93 @@
   }
 }
 
+@media only screen and (max-width: 1366px) {
 
-@media only screen and (max-width: 568px) {
+    .footer {
+      /* height: 50vh; */
+    }
+
+}
+
+@media only screen and (max-width: 1024px) {
+   /* @media (orientation: landscape) { */
+    .footer {
+      /* height: 56vh; */
+    }
+  /* } */
+}
+
+@media only screen and (max-width: 830px) {
    @media (orientation: landscape) {
     .footer {
-      height: 50vh;
+      /* height: 40vh; */
     }
   }
 }
 
 @media only screen and (max-width: 812px) {
    @media (orientation: landscape) {
+    .footer {
+      /* height: 30vh; */
+      /* height: 55vh; */
+    }
     .footer-span-text {
       font-size: 17px;
     }
   }
 }
 
-@media only screen and (max-width: 812px) {
+
+@media only screen and (max-width: 768px) {
+  .footer {
+    /* height: 50vh; */
+    text-align: left;
+  }
+  .footer > a {
+    margin: 20px 40px;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+   /* @media (orientation: landscape) { */
+    .footer {
+      /* height: 40vh; */
+      text-align: left;
+      font-size: 0px;
+    }
+  /* } */
+}
+
+@media only screen and (max-width: 760px) {
    @media (orientation: landscape) {
     .footer {
-      height: 30vh;
+      /* height: 50vh; */
+      text-align: left;
     }
   }
 }
+
+@media only screen and (max-width: 568px) {
+   @media (orientation: landscape) {
+    .footer {
+      /* height: 54vh; */
+    }
+  }
+}
+
+
+/* @media only screen and (max-width: 658px) {
+   @media (orientation: landscape) {
+    .footer {
+      height: 50vh;
+    }
+  }
+} */
+
+
+
+
+
 
 
 /*
