--- a/css/contact-header.css
+++ b/css/contact-header.css
@@ -1,6 +1,7 @@
 /* NAVBAR */
 header {
-  background-color: black;
+  background-color: transparent;
+  color: rgb(33, 33, 33);
   width: 100%;
   height: 100px;
 }
