--- a/css/contact-header.css
+++ b/css/contact-header.css
@@ -1,7 +1,6 @@
 /* NAVBAR */
 header {
-  background-color: transparent;
-  color: rgb(33, 33, 33);
+  background-color: black;
   width: 100%;
   height: 100px;
 }
@@ -18,7 +17,7 @@ header {
 }
 .grid-item {
   background-color: transparent;
-  color: rgb(33, 33, 33);
+  color: rgb(201, 198, 198);
   font-size: 20px;
   text-align: center;
   padding-top: 15px;
