--- a/css/contact.css
+++ b/css/contact.css
@@ -14,7 +14,7 @@ body {
 
 /* EMAIL FORM */
 form {
-  max-width: 40%;
+  max-width: 700px;
   margin: 0 auto;
   /* height: 60vh; */
   margin-bottom: 10vh;
