--- a/css/main.css
+++ b/css/main.css
@@ -50,6 +50,7 @@ a:hover .title-div {
   -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
   text-align: center;
+  font-family: 'Lato', sans-serif;
 }
 /* IMAGE HOVER OVERLAY */
 
