--- a/css/header.css
+++ b/css/header.css
@@ -26,6 +26,7 @@ body {
   padding-top: 15px;
   text-decoration: none;
   height: 10vh;
+  font-family: 'Lato', sans-serif;
 }
 .phone {
   display: none;
