--- a/css/mq-header.css
+++ b/css/mq-header.css
@@ -41,7 +41,7 @@
   }
   .mobile-head-link {
     display: block;
-    margin-top: 20px;
+    margin-top: 0px;
     position: absolute;
     top: 50%;
     left: 50%;
@@ -56,6 +56,7 @@
     font-size: 30px;
     display: block;
     margin-top: 10px;
+    font-family: 'PT Sans', sans-serif;
   }
   .mobile-ifram-header {
     padding-top: 100vh;
