--- a/css/contact.css
+++ b/css/contact.css
@@ -8,7 +8,7 @@ body {
   text-align: center;
   font-size: 40px;
   color: #9e0505;
-  text-transform: uppercase;
+  font-family: 'PT Sans', sans-serif;
 }
 
 
