--- a/css/mq-contact.css
+++ b/css/mq-contact.css
@@ -18,7 +18,7 @@
 @media only screen and (min-width: 760px) {
   .footer {
     position: absolute;
-    bottom: 0;
+    /*bottom: 0;*/
   }
 }
 /* EMAIL FORM */
