--- a/css/main.css
+++ b/css/main.css
@@ -24,6 +24,7 @@
 /* IMAGE HOVER OVERLAY */
 .image-link:hover {
   opacity: 0.7;
+  height: 200px;
 }
 .title-div {
   position: relative;
@@ -33,6 +34,10 @@
   /* background-color: rgb(31, 32, 32); */
   color: white;
   font-size: 20px;
+  
+    position: relative;
+    bottom: 50%;
+}
 }
 
 a:hover .title-div {
