--- a/css/main.css
+++ b/css/main.css
@@ -24,7 +24,7 @@
 /* IMAGE HOVER OVERLAY */
 .image-link:hover {
   opacity: 0.7;
-  height: 200px;
+  height: 100%;
 }
 .title-div {
   position: relative;
