--- a/css/main.css
+++ b/css/main.css
@@ -30,7 +30,7 @@
   position: relative;
   bottom: 50%;
   opacity: 0;
-  transition: .5s ease;
+  /* transition: .5s ease;
   /* background-color: rgb(31, 32, 32); */
   color: white;
   font-size: 20px;
